                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 18-07-2004 changed: mplayer.conf updated to reflect improvements to playback smoothness observed by carlito
  - 16-07-2004 changed: Made Project Mayhem the default Skin.
  - 16-07-2004 fixed: Missing skin.xml from Project Mayhem skin (thanks foss)
  - 16-07-2004 added: ability to change the webserver port in XboxMediaCenter.xml (use <webserver> tag).
  - 14-07-2004 changed: Updated strings.xml with Chokeman's suggestion for post processing alignment
  - 14-07-2004 added: added My Programs setting to use Directory Names as description instead of embedded XBE description.
  - 12-07-2004 changed: immediate hd-spindown disabled while not playing fullscreen (preview/calibrating)
  - 12-07-2004 added: added Soften setting to Settings->User Interface
                      added Flicker filter setting to Settings->User Interface
                      moved Soften setting from Settings->My Videos to Settings->My Videos->Filters
                      added Flicker filter setting to Settings->My Videos->Filters
  - 10-07-2004 fixed: Auto-shutdown sometimes resets settings (hopefully)
  - 10-07-2004 fixed: AC3 5.1 was being played as 2 channel when digital enabled but passthrough disabled.
  - 08-07-2004 added: my music artist view now also shows the albums of the artist
  - 08-07-2004 added: My Programs now allows a depth when using flattening (default of 1) [REF: 982895].
  - 08-07-2004 added: possibility to specify default username for samba. usfull for smb browsing.
  - 08-07-2004 fixed: xbmc sometimes didn't go back to the share root when navigating up a directory.